layout shift fix with min-height

--- a/static-job-listings-master.scss
+++ b/static-job-listings-master.scss
@@ -128,7 +128,7 @@ html{
         @include bg-color(map-get($colors,Light Grayish Cyan),nth($fallback-color,1));
       }
       main{
-        min-height: 100em;
+        min-height: 120em;
       }
       section,header{
           @include padding(0.4em);
